@@ -1,4 +1,5 @@
-2840 [Main]                 fixed a crash if a folder is dropped onto the main form. bug #906
+2841 [OneClick]             fixed audio track processing for some file types if DG* indexer is used (e.g. VOB without IFO)
+2840 [Main]                 fixed a crash if a folder is dropped onto the main window. bug #906
 2839 [OneClick]             fixed tracks 2 to n-1 not properly selecting their input track stream (regression of 2808). bug #907
 2838 [x264]                 do not add "--output-depth 8" for 8 bit targets. feature request #636
 2837 [Updater]              redist files are only copied if not installed
